--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SECRET_KEY='django-insecure-orprhvmv!=)c2)f59!$7$65m0how=wjp3qj7n$_)do5e$@s)1g'
-DEBUG=True
+export SECRET_KEY='django-insecure-orprhvmv!=)c2)f59!$7$65m0how=wjp3qj7n$_)do5e$@s)1g'
+export DEBUG=True
